# Blackjackpython

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  blackjack.bat  blackjack.py  mejora-graficos.md  mejora.md  programa.bat  programa.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  design.md  original_program_analysis.md  postmortem.md
docs/adr/: 0001-presentation-layer.md  0002-domain-model.md  0003-rng-and-determinism.md  0004-aesthetic-retro-fusion.md  0005-persistence-xdg-json.md
legacy/: SOURCES.md
src/blackjack21/: __init__.py  __main__.py
src/blackjack21/application/: __init__.py  achievements.py  counter.py  drill.py  events.py  odds.py  ports.py  session.py  strategy.py  use_cases.py
src/blackjack21/assets/: blackjack.tcss
src/blackjack21/domain/: __init__.py  actions.py  cards.py  dealer.py  deck.py  errors.py  hand.py  outcomes.py  rules.py  shuffler.py  state.py
src/blackjack21/infrastructure/: __init__.py  paths.py  persistence.py  rng.py
src/blackjack21/presentation/: __init__.py  banner.py  cli.py  demo.py  render.py  theme.py  tui.py
tests/: conftest.py
tests/e2e/: test_demo.py  test_tui.py
tests/integration/: test_cli.py  test_drill_cli.py  test_persistence.py  test_scores_cli.py  test_use_cases.py
tests/property/: test_persistence_fuzz.py  test_properties.py  test_strategy_properties.py
tests/unit/: test_achievements.py  test_actions.py  test_banner.py  test_cards.py  test_counter.py  test_dealer.py  test_deck.py  test_drill.py  test_hand.py  test_multideck.py  test_odds.py  test_outcomes.py  test_pip_patterns.py  test_render.py  test_rules.py  test_smoke.py  test_state.py  test_strategy.py  test_surrender.py  test_themes.py
