[project]
name = "blackjack21"
version = "1.0.0"
description = "Modern Python reinterpretation of Ahl's 1978 BASIC Black Jack."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "blackjack21 contributors" },
]
keywords = ["blackjack", "21", "card game", "tui", "retro", "textual"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "pydantic>=2.7",
    "rich>=13.7",
    "structlog>=24.1",
    "textual>=0.71",
    "typer>=0.12",
]

[project.scripts]
blackjack21 = "blackjack21.__main__:app"

[project.urls]
Homepage = "https://github.com/davidvivo-ia/blackjackpython"
Source = "https://github.com/davidvivo-ia/blackjackpython"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blackjack21"]

[tool.hatch.build.targets.wheel.force-include]
"src/blackjack21/assets" = "blackjack21/assets"

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "PT",
    "PL", "TID", "ANN", "ARG", "PIE", "RUF",
]
ignore = [
    "ANN401",
    "PLR0913",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PLR2004", "S101"]
"src/blackjack21/presentation/**" = ["PLR0915"]
"src/blackjack21/domain/outcomes.py" = ["PLR0911"]
"src/blackjack21/domain/state.py" = ["PLR0911"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_no_return = true
disallow_any_unimported = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["textual.*"]
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "slow: marks slow tests",
    "e2e: end-to-end tests of the TUI/demo",
]

[tool.coverage.run]
source = ["src/blackjack21"]
branch = true
omit = [
    "src/blackjack21/presentation/tui.py",
    "src/blackjack21/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
